Bug 302508 - Click on presence applet will set the status of my logged in accounts to the "current" presence status
Summary: Click on presence applet will set the status of my logged in accounts to the ...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: presence-applet (other bugs)
Version First Reported In: 0.4.0
Platform: Ubuntu Linux
: NOR major
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-25 14:30 UTC by Vangelis
Modified: 2013-03-01 17:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vangelis 2012-06-25 14:30:21 UTC
I have two logged in accounts. 
One is gmail and one is MSN.

When I set my status to invisible, the actual status shown on the presence plasmoid is "Busy", even though the status is truly being set to invisible for both of the accounts.

Now when I click on the presence plasmoid, KDE IM Contacts opens and all of my accounts are set to invisible.

There are two bugs here.
1. Presence plasmoid cannot show the invisible status.
2. When you click on it, it will set the current status to whatever it can really show (busy in my case).

Reproducible: Always

Steps to Reproduce:
1. Add your gmail account
2. Right click on presence plasmoid and set the status to "invisible"
3. Check the presence from the web to see that it is invisible (It should be)
4. Check also the presence plasmoid icon to see that it looks like busy (also the tooltip shows busy)
5. Click on it to open the "KDE IM Contacts"
6. Repeat 3 and 4 but you will see that now the presence has been really set to "Busy", something not desirable.


Expected Results:  
It should accept the invisible status and not set any other when you click on the icon.
Comment 1 Martin Klapetek 2012-06-25 14:53:28 UTC
Thanks for the report!

If you hover over the presence chooser in contact list, does it list all your accounts as invisible? Thing is that if there is one account not supporting such presence, it sets (or should set) all accounts to the last common presence, which in this case is 'Busy'. We still might have a bug in contact list displaying something else than the presence plasmoid though.
Comment 2 Vangelis 2012-06-25 15:14:57 UTC
(In reply to comment #1)
> Thanks for the report!
> 
> If you hover over the presence chooser in contact list, does it list all
> your accounts as invisible? Thing is that if there is one account not
> supporting such presence, it sets (or should set) all accounts to the last
> common presence, which in this case is 'Busy'. We still might have a bug in
> contact list displaying something else than the presence plasmoid though.

If I hover over the presence chooser, I see all of my accounts set to "Busy"
Comment 3 Martin Klapetek 2012-06-25 15:17:42 UTC
So the presence plasmoid is correct. And the contact list shows 'Invisible', right? That's definitely a bug then.
Comment 4 David Edmundson 2012-06-25 15:23:46 UTC
Confirmed - confusingly broken for me too. I suspect a mixup of requestedPresence and currentPresence() between contact list and presence applet.

From mc-tool after setting my status to "invisible".

Facebook:
   Automatic: available (2) ""
     Current: dnd (6) ""
   Requested: hidden (5) ""
    Changing: no

GTalk:
   Automatic: available (2) ""
     Current: hidden (5) ""
   Requested: hidden (5) ""
    Changing: no

LocalXMPP:
   Automatic: available (2) ""
     Current: dnd (6) ""
   Requested: hidden (5) ""
Comment 5 Vangelis 2012-06-25 16:11:40 UTC
I just found what's happening exactly:

I have installed telepathy-salut. The "lowest online" status of salut before 'offline' is 'Busy' so when I set the presence to 'invisible' from the presence plasmoid, I see the busy icon and when I hover over the icon I see my status is busy as well but only salut is busy. Gmail and MSN are invisible as they should be (I asked some of my contacts and this is confirmed).

Now when I click on the plasmoid, 'KDE IM Contacts' will open and at THIS moment all of the accounts are set to 'Busy'.

btw when one hover over the icon on this plasmoid it would be nice to show the actual status of each individual account.
Comment 6 David Edmundson 2013-03-01 17:51:01 UTC
Git commit 3b7a541d1ef8634b336ba9bd64a70dc4cc7027c3 by David Edmundson.
Committed on 01/03/2013 at 18:40.
Pushed by davidedmundson into branch 'master'.

Show request presence in presence applet rather than current

This brings it in line with the contact list
REVIEWED-BY: Martin Klapetek

M  +3    -3    presence/src/presence-applet.cpp

http://commits.kde.org/telepathy-contact-applet/3b7a541d1ef8634b336ba9bd64a70dc4cc7027c3