Show request presence in presence applet rather than current

This brings it in line with the contact list

BUG: 302508
REVIEWED-BY: Martin Klapetek